[CORE] SonarLint Code Review Remarks
Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>